Replaced demo project with test project

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -4,6 +4,6 @@ envlist = py26, py27, py33
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/{{ cookiecutter.app_name }}
-commands = python runtests.py
+commands = python ./{{ cookiecutter.app_name }}/testproject/manage.py test
 deps =
     -r{toxinidir}/requirements-test.txt
